--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fake call app </title>
-    <link rel="stylesheet" href="./styles/style.css">
-
-  </head>
-  <body>
-    <main>
-
-  </body>
+    <title>My GitHub Page</title>
+</head>
+<body>
+    <h1>Hello, GitHub!</h1>
+    <p>Check out my text file: <a href="app-ads.txt">example.txt</a></p>
+</body>
 </html>
